<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fondo_avion"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="327dp"
        android:layout_height="83dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/jua"
        android:text="@string/logea_y_empieza_a_transferir"
        android:textColor="#1A1A1A"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/jua"
        android:text="@string/email"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/email"
        android:layout_width="326dp"
        android:layout_height="54dp"
        android:layout_marginTop="35dp"
        android:background="@null"
        android:hint="@string/ingresa_tu_email"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/jua"
        android:text="Password"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="331dp"
        android:layout_height="51dp"
        android:hint="@string/ingresa_tu_contrase_a"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="151dp"
        android:layout_height="13dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jua"
        android:textColor="#1A87DD"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


    <Button
        android:id="@+id/button2"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#63B8FC"
        android:fontFamily="@font/jua"
        android:scrollbarSize="14sp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Crear una nueva Cuenta"
        android:fontFamily="@font/jua"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />
</androidx.constraintlayout.widget.ConstraintLayout>