<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondohomepage" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="305dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/rostro" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/barra_superior"
        tools:layout_editor_absoluteX="131dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="45dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jua"
        android:text="@string/inicio"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jua"
        android:text="@string/hola_amanda"
        android:textColor="#80FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="119dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jua"
        android:text="@string/balance_total"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jua"
        android:text="@string/_124_57"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/enviardinero"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/verde"
        android:fontFamily="@font/jua"
        android:padding="12dp"
        android:text="@string/enviar_dinero"
        android:textColor="#1A1A1A"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView14"
        app:layout_constraintEnd_toStartOf="@+id/ingresarDinero"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <Button
        android:id="@+id/ingresarDinero"
        android:layout_width="178dp"
        android:layout_height="60dp"
        android:padding="12dp"
        android:backgroundTint="@color/celeste"
        android:fontFamily="@font/jua"
        android:text="@string/ingresar_dinero"
        android:textColor="#1A1A1A"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enviardinero"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/ingresarDinero"
        app:layout_constraintBottom_toTopOf="@id/imageView13"
        app:srcCompat="@drawable/user_04"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="587dp" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:layout_constraintBottom_toTopOf="@+id/imageView18"
        app:srcCompat="@drawable/user_03"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/user_02"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:layout_constraintBottom_toTopOf="@+id/imageView17"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="441dp" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/user_01"
        app:layout_constraintTop_toBottomOf="@+id/imageView18"
        app:layout_constraintBottom_toTopOf="@id/imageView15"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="372dp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/user_05"
        tools:layout_editor_absoluteX="33dp" />




</androidx.constraintlayout.widget.ConstraintLayout>